--- a/assets/sass/newStyles/_mustread.scss
+++ b/assets/sass/newStyles/_mustread.scss
@@ -43,7 +43,7 @@
 				top: 100px;
 			}
 			@media (max-width: $xsmall) {
-				display: none;
+				display: none!important;
 			}
 
 			&:hover {
@@ -72,6 +72,9 @@
 			overflow: hidden;
 			padding: 0!important;
 			margin: 0 50px;
+			@media (max-width: $xsmall) {
+				margin: 0;
+			}
 		}
 
 		.item {
@@ -85,6 +88,9 @@
 			@media (max-width: $small) {
 				text-align: center;
 				margin: 0 20px;
+			}
+			@media (max-width: $xsmall) {
+				margin: 0;
 			}
 
 			.image {
