Подгрузка новых элементов новостей по клику на кнопку, стили для главной

--- a/assets/sass/newStyles/_fixes.scss
+++ b/assets/sass/newStyles/_fixes.scss
@@ -262,7 +262,7 @@
 	}
 
 	.an-notify {
-		position: relative;
+		position: fixed;
 		height: 0;
 		overflow: hidden;
 		top: 0;
@@ -270,7 +270,7 @@
 		text-align: center;
 
 		&.visible {
-			position: relative;
+			position: fixed;
 			height: 53px;
 			top: 0;
 			transition: all .1s ease-in-out;
