Стили для блока миссии на главной

--- a/assets/sass/newStyles/_fixes.scss
+++ b/assets/sass/newStyles/_fixes.scss
@@ -1145,3 +1145,20 @@ body {
 		}
 	}
 }
+
+.manifest {
+
+	.image {
+
+		&.first-child {
+			left: 0;
+			width: 100%;
+			text-align: center;
+			margin-left: 0;
+		}
+
+		img {
+			max-width: 100%;
+		}
+	}
+}
