--- a/assets/sass/newStyles/_news-item.scss
+++ b/assets/sass/newStyles/_news-item.scss
@@ -78,7 +78,7 @@
 			display: flex;
 			justify-content: center;
 			height: 100%;
-			cursor: url(../../images/icon/arrow-w-r.svg), auto;
+			cursor: url(../../images/icon/StrelkaWhiteRight.png), auto;
 
 			.holder {
 				max-width: 100%;
