--- a/assets/sass/newStyles/_tipical-gallery.scss
+++ b/assets/sass/newStyles/_tipical-gallery.scss
@@ -13,7 +13,7 @@
         display: flex;
         justify-content: center;
         height: 100%;
-        cursor: url(../../images/icon/arrow-w-r.svg), auto;
+        cursor: url(../../images/icon/StrelkaWhiteRight.png), auto;
 
         .holder {
             max-width: 100%;
