--- a/assets/sass/newStyles/_projects.scss
+++ b/assets/sass/newStyles/_projects.scss
@@ -142,6 +142,11 @@
                 a {
                     color: #000;
                     text-decoration: none;
+
+                    img {
+                        display: inline-block;
+                        width: 18px;
+                    }
                 }
             }
         }
