--- a/assets/sass/newStyles/_projects.scss
+++ b/assets/sass/newStyles/_projects.scss
@@ -136,8 +136,7 @@
                 text-transform: uppercase;
                 font-family: 'geometriabold';
                 font-size: 24px;
-                padding-top: 110px;
-                padding-left: 60px;
+                padding: 110px 60px 0;
 
                 a {
                     color: #000;
@@ -225,21 +224,34 @@
     }
 }
 
+
+.b-projects {
+
+    .flickity-row {
+        
+        .item {
+            margin-left: 0;
+
+            & + .item {
+                margin-left: 15px;
+            }
+        }
+    }
+}
+
 .author-page {
 
-    .b-projects {
-
-        .owl-stage {
-
-            .owl-item:first-child {
-
-                .item {
-                    padding-left: 12em;
-                    @media(max-width: $large) {
-                        padding-left: 6em;
-                    }
-                }
-            }
+    .project-item {
+        margin-left: calc((100% - 80em) / 2 + 2em);
+        @media (max-width: $large) {
+            margin-left: calc((100% - 70em) / 2 + 2em);
+        }
+        @media (max-width: 1024px) {
+            margin-left: calc(5% + 2em);
+        }
+        @media (max-width: $small) {
+            margin-left: 20px;
+            margin-right: 20px;
         }
     }
 }
