--- a/assets/sass/newStyles/_banner.scss
+++ b/assets/sass/newStyles/_banner.scss
@@ -43,11 +43,20 @@
         }
 
         .text {
-            font-size: 44px;
-            line-height: normal;
-            max-width: 735px;
+            max-width: 835px;
+            font-size: 28px;
+            line-height: 34px;
             text-align: center;
+
+            @media (max-width: $xlarge) {
+
+                & .date-item {
+                    font-size: 28px;
+                    line-height: 32px;
+                }
+            }
             @media (max-width: $large) {
+                max-width: 735px;
                 font-size: 20px;
                 line-height: 24px;
             }
@@ -61,7 +70,7 @@
 
             &.large {
                 display: none;
-                @media (max-width: $large) {
+                @media (min-width: $small) {
                     display: block;
                 }
                 @media (max-width: $small) {
@@ -70,10 +79,7 @@
             }
 
             &.xlarge {
-                display: block;
-                @media (max-width: $large) {
-                    display: none;
-                }
+                display: none;
             }
 
             .date-item {
