fix: changed font-family in banner desc

--- a/assets/sass/newStyles/_banner.scss
+++ b/assets/sass/newStyles/_banner.scss
@@ -42,6 +42,10 @@
             }
         }
 
+        .desc {
+            font-family: 'geometriamedium';
+        }
+
         .text {
             max-width: 835px;
             font-size: 28px;
