--- a/assets/sass/newStyles/_banner.scss
+++ b/assets/sass/newStyles/_banner.scss
@@ -52,6 +52,10 @@
             line-height: 34px;
             text-align: center;
 
+            & a {
+                text-decoration: none;
+            }
+
             @media (max-width: $xlarge) {
 
                 & .date-item {
