--- a/assets/sass/newStyles/_future-expo.scss
+++ b/assets/sass/newStyles/_future-expo.scss
@@ -2,19 +2,18 @@
 	padding-bottom: 110px;
 	border-bottom: 1px solid #000;
 	margin: 0;
-	margin-bottom: 140px;
 	min-height: fit-content;
+    padding-top: 135px;
 	@media (max-width: $large) {
+        padding-top: 85px;
 		padding-bottom: 70px;
-		margin-bottom: 100px;
 	}
 	@media (max-width: $small) {
+        padding-top: 80px;
 		padding-bottom: 90px;
-		margin-bottom: 100px;
 	}
 	@media (max-width: $xsmall) {
 		padding-bottom: 50px;
-		margin-bottom: 60px;
 	}
 
 	.news-snip {
