--- a/assets/sass/newStyles/_future-expo.scss
+++ b/assets/sass/newStyles/_future-expo.scss
@@ -13,12 +13,25 @@
 		padding-bottom: 90px;
 	}
 	@media (max-width: $xsmall) {
-		padding-bottom: 50px;
+		padding-bottom: 0;
+        border-bottom: none;
+
+        &.row:after {
+            content: '';
+            width: calc(100% - 40px);
+            height: 1px;
+            background: #000;
+            bottom: 50px;
+            margin: 0 20px;
+        }
 	}
 
 	.news-snip {
 		padding-right: 0;
 		padding-left: 0;
+        @media (max-width: $xsmall) {
+            padding-bottom: 52px !important;
+        }
 	}
 
 	.news-snip-content {
