fix: hide logo in submenu on exhibitions page

--- a/assets/sass/newStyles/_fixes.scss
+++ b/assets/sass/newStyles/_fixes.scss
@@ -807,6 +807,12 @@ body {
 					}
 				}
 
+                & .lg-black {
+                    @media (max-width: $xsmall) {
+                        display: none;
+                    }
+                }
+
 				#an-backtotop, #header-nav {
 					animation: fade .5s;
 					@media (max-width: $xsmall) {
