fix: hide submenu after reload on exhibitions page

--- a/assets/sass/newStyles/_fixes.scss
+++ b/assets/sass/newStyles/_fixes.scss
@@ -771,6 +771,7 @@ body {
 
 			.sub-scroll-menu {
 				opacity: 0;
+                display: none;
 				transition: none;
 
 				.item {
@@ -780,12 +781,17 @@ body {
 
 			&.fade-fast {
 				animation: fade .5s;
+
+                & .sub-scroll-menu {
+                    display: none;
+                }
 			}
 
 			&.sticky {
 
 				.sub-scroll-menu {
-					opacity: 1;
+					opacity: 0;
+                    display: none;
 					transition: opacity .5s ease-in-out;
 				}
 			}
@@ -795,6 +801,7 @@ body {
 
 				.sub-scroll-menu {
 					opacity: 1;
+                    display: block;
 					transition: opacity .5s ease-in-out;
 					visibility: visible;
 
