--- a/assets/sass/newStyles/_main-modal.scss
+++ b/assets/sass/newStyles/_main-modal.scss
@@ -226,7 +226,14 @@
                 .expand {
                     @media (max-width: $xsmall) {
                         padding-top: 6px;
-                        display: none;
+                        max-height: 0;
+                        overflow: hidden;
+                        transition: max-height 0.3s ease-in-out;
+                    }
+                }
+                .expand.open {
+                    @media (max-width: $xsmall) {
+                        max-height: 350px;
                     }
                 }
             }
