fix: padding personal expander on booklet page

--- a/assets/sass/newStyles/_locations.scss
+++ b/assets/sass/newStyles/_locations.scss
@@ -54,6 +54,10 @@
 		.locations-type {
 			padding: 0 10px;
 
+            @media (max-width: $xsmall) {
+                padding: 0 20px;
+            }
+
 			&#list-block {
 				display: flex;
 				margin-top: 50px;
