fix: position caption Last News on news page

--- a/assets/sass/newStyles/_exhibition-carousel.scss
+++ b/assets/sass/newStyles/_exhibition-carousel.scss
@@ -36,6 +36,9 @@
 		@media (max-width: $large) {
 			margin-bottom: 0;
 		}
+        @media (max-width: $xsmall) {
+            padding-left: 14px;
+        }
 	}
 
 	.tipical-gallery {
