--- a/assets/sass/newStyles/_news.scss
+++ b/assets/sass/newStyles/_news.scss
@@ -1,16 +1,19 @@
-.news {
-    & .news-snip-last {
-        @media (max-width: $xsmall) {
-            transform: none;
-            position: relative;
-            top: 0;
-            left: 20px !important;
-            height: auto;
-            margin-bottom: 10px;
-            font-size: 18px;
+.news-page {
+    & .news {
+        & .news-snip-last {
+            @media (max-width: $xsmall) {
+                transform: none;
+                position: relative;
+                top: 0;
+                left: 20px !important;
+                height: auto;
+                margin-bottom: 10px;
+                font-size: 18px;
+            }
         }
     }
 }
+
 
 .news-page h1 {
     @media (max-width: $xsmall) {
