--- a/assets/sass/newStyles/_fixes.scss
+++ b/assets/sass/newStyles/_fixes.scss
@@ -934,6 +934,17 @@ body {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+    position: relative;
+
+    &:before {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background-color: rgba(0, 0, 0, 0.25);
+    }
 
 	#main{
 		min-height: unset;
