Новая страница О Галерее

--- a/assets/sass/newStyles/_fixes.scss
+++ b/assets/sass/newStyles/_fixes.scss
@@ -1258,3 +1258,18 @@ body {
 		top: 0;
 	}
 }
+
+.about-page {
+
+	#main {
+		padding-top: 0;
+	}
+
+	#header {
+		top: 0;
+
+		& > a[href="#nav"] {
+			background-image: url(../../images/icon/burger.svg);
+		}
+	}
+}
