--- a/assets/sass/newStyles/_project-title.scss
+++ b/assets/sass/newStyles/_project-title.scss
@@ -1,9 +1,9 @@
 .b-project-title {
     text-align: center;
-    display: none;
+    display: block;
     line-height: normal;
-    @media (max-width: $small) {
-        display: block;
+    @media (min-width: $small) {
+        display: none;
     }
 
     .title {
