Фикс стилей страницы Проекта

--- a/assets/sass/newStyles/_project-about.scss
+++ b/assets/sass/newStyles/_project-about.scss
@@ -1,5 +1,6 @@
 .b-project-about {
-    padding: 170px 0 90px;
+    // padding: 170px 0 90px;
+    padding: 0 0 90px;
     @media (max-width: $small) {
         padding: 120px 0 140px;
     }
